[workspace]
members = [
    "enums_pattern_matching",
    "guessing_game",
    "ownership",
    "using_structs",
    "variables",
    "minigrep",
    "collections"
, "error_handling", "my-project-package"]
[package]
name = "the-rust-programming-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[cargo-new]
vcs = "none"

[dependencies]
